# ML_RowingTracker

./: README.md  app.py  auth.py  pyproject.toml  requirements.txt
templates/: about.html  addsplit.html  allgraphs.html  allsplits.html  average_speed_vs_date.html  average_split_time_vs_date.html  dashboard.html  edit_split.html  forgot.html  home.html  needmoresessions.html  nosplits.html  notenoughsessions.html  percentage_change_distance_and_speed_vs_date.html  predict_speed.html  predicted_average_speed_vs_date.html  signup.html  total_distance_vs_date.html
